# kidpro

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
conda/: environment.yml
conf/: config.yaml  config_cls.yaml  config_mil.yaml  config_wsi.yaml
conf/data/: default.yaml  default_mil.yaml
conf/dataset/: glom.yaml  ifta.yaml  inflam.yaml  m0m1.yaml  mil.yaml  wsi.yaml
conf/export/: default.yaml
conf/hydra/: default.yaml  patch.yaml
conf/mlflow/: default.yaml  default_wsi.yaml
conf/model/: prov_gigapath.yaml  timm.yaml  uni2_h.yaml  virchow2.yaml
conf/patch/: default.yaml  glom.yaml  inflam.yaml  outcome.yaml
conf/paths/: glom.yaml  ifta.yaml  inflam.yaml  m0m1.yaml  mil.yaml
conf/runtime/: default.yaml
conf/task/: glom.yaml  ifta.yaml  inflam.yaml  m0m1.yaml  mil.yaml
conf/train/: default.yaml  default_mil.yaml  (+1 more)
docs/: README.md  architecture.md  configuration.md  data.md  development.md  index.md  inference.md  overview.md  setup.md  training.md  troubleshooting.md
notebook/: exploratory.ipynb
notebooks/: 0_First_Steps.ipynb  1_Patch_Extraction.ipynb  2_Training_loop_IFTA_segmentation.ipynb  2_Training_loop_Inflammation_segmentation.ipynb  2_Training_loop_glomerulus_segmentation.ipynb  2_Training_loop_m0m1_classification.ipynb  2_Training_loop_신기능저하_5Y_outcome_prediction_classication_baseline.ipynb  3_Inference_IFTA_segmentation.ipynb  3_Inference_Inflammation_segmentation.ipynb  3_Inference_Segmentation.ipynb  3_Inference_glomerulus_segmentation.ipynb  3_Inference_m0m1_classification.ipynb
(+83 files in other folders)
