[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kidpro"
version = "0.1.1"
description = "Path Kids Training Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Path Kids (Team)" }
]
dependencies = [
  # Core
  "numpy>=1.24",
  "pandas>=2.0",
  "tqdm>=4.66",
  "pydantic>=2.5",
  # Config
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  # ML / vision
  "torch>=2.1",
  "torchvision>=0.16",
  "albumentations>=1.3",
  "opencv-python>=4.8",
  # Segmentation models
  "segmentation-models-pytorch>=0.3.3",
  "timm>=0.9.0",
  # ML metrics (FIXED: was missing)
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.8",
  "pytest>=7.4",
  "ipykernel>=6.29",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kidpro = ["conf/**/*.yaml", "conf/**/*.yml"]